// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput component Component all props matches snapshot 1`] = `
<View
  editable={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#9e9e9e",
        "borderRadius": 50,
        "borderStyle": "solid",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingBottom": 2,
        "paddingLeft": 15,
        "paddingRight": 5,
        "paddingTop": 2,
        "width": "100%",
      },
    ]
  }
>
  <SvgMock
    height="30px"
    testID="sommelier-search-input-search-svg"
    width="30px"
  />
  <TextInput
    allowFontScaling={true}
    defaultValue="abc"
    editable={true}
    maxLength={30}
    onChange={[MockFunction]}
    onChangeText={[Function]}
    placeholder="123"
    rejectResponderTermination={true}
    size="lg"
    style={
      Array [
        Object {
          "fontSize": 18,
          "height": 50,
          "paddingLeft": 5,
          "paddingRight": 60,
          "width": "100%",
        },
      ]
    }
    testID="sommelier-search-input"
    underlineColorAndroid="transparent"
    value="987"
  />
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "marginLeft": 5,
          "position": "absolute",
          "right": 15,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="sommelier-search-input-clear-button"
    >
      <SvgMock
        height="18px"
        testID="sommelier-search-input-close-svg"
        width="18px"
      />
    </View>
  </View>
</View>
`;

exports[`SearchInput component Component with only necessary props matches snapshot 1`] = `
<View
  editable={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#9e9e9e",
        "borderRadius": 50,
        "borderStyle": "solid",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingBottom": 2,
        "paddingLeft": 15,
        "paddingRight": 5,
        "paddingTop": 2,
        "width": "100%",
      },
    ]
  }
>
  <SvgMock
    height="20px"
    testID="sommelier-search-input-search-svg"
    width="20px"
  />
  <TextInput
    allowFontScaling={true}
    editable={true}
    onChange={[MockFunction]}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    size="md"
    style={
      Array [
        Object {
          "fontSize": 16,
          "height": 38,
          "paddingLeft": 5,
          "paddingRight": 60,
          "width": "100%",
        },
      ]
    }
    testID="sommelier-search-input"
    underlineColorAndroid="transparent"
  />
</View>
`;
